Version 1.12 - 2017-04-28
* FEA#0000 Module Creation